# MFA

./: .replit  main.py  pyproject.toml
monprojet/: settings.py  urls.py  wsgi.py
